--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,34 +109,19 @@ services:
       - default 
 
   dummy-device-v2: # Context provider example. Build using flask
-    build: ./dummy-device-v2 # Build this image from the ./context-providerfolder
+    build: ./dummy-device # Build this image from the ./context-providerfolder
     hostname: dummy-device-v2
     container_name: dummy-device-v2
     depends_on:
       - orion
     volumes:
-      - ./dummy-device-v2:/code
+      - ./dummy-device:/code
     expose: # Expose this port to the network
-      - "8282"
+      - "70"
     ports: # Match port 6000 from the container to the localhost
-      - "8282:8282"
+      - "70:70"
     networks: # Include this container in the default network
-      - default 
-
-  dummy-device-v3: # Context provider example. Build using flask
-    build: ./dummy-device-v3 # Build this image from the ./context-providerfolder
-    hostname: dummy-device-v3
-    container_name: dummy-device-v3
-    depends_on:
-      - orion
-    volumes:
-      - ./dummy-device-v3:/code
-    expose: # Expose this port to the network
-      - "8383"
-    ports: # Match port 6000 from the container to the localhost
-      - "8383:8383"
-    networks: # Include this container in the default network
-      - default    
+      - default  
 
 networks: # Create a network for the docker containers
   default:
